project/stage/tests/accept/functions_w_var_decls_w_statements/recursive_expr/recursive_expr.ul
void m() {
    id [ expr ] = expr;
    id = expr ;
    while ( expr ) { }
    if (1) {}
    if (true) {} else {}
    return ;
    return expr;
    println expr;
    print expr;
    expr;

    id [ expr ];
    id [ expr[0] ];
    id [ ((expr[0])) ];
    id [ id [ (( expr [ 1 ] )) ] ];

    ;
}
