project/stage/tests/reject/bad_statements/bad_assignments/aggregate_types/no_literal.ul
int [00000] foo() {
    id [ ID ] = ;
}
